--- a/segunda-aplicacion/src/App.css
+++ b/segunda-aplicacion/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.centrar-titulo{
+  text-align: center;
+  margin: 0 auto;
+  text-decoration: underline;
+}
